# sdl3_vulkan_node2d

./: CMakeLists.txt  README.md  build.md  build.sh  run.bat  run.sh  shader.bat
include/: module_text.h  module_vulkan.h  shader2d_frag_spv.h  shader2d_vert_spv.h  shader_text_frag_spv.h  shader_text_vert_spv.h  vulkan_utils.h
shaders/: shader2d.frag  shader_text.frag  shader_text.vert
src/: main.c  module_text.c  module_vulkan.c  vulkan_utils.c
